# latency-book

./: LICENSE  README.md
chapter-02/: ping.py  plot-ecdf.py  plot-hdrhist.py  plot-hist.py
chapter-03/rust/hello-postgresql/: Cargo.toml
chapter-03/rust/hello-postgresql/src/: main.rs
chapter-03/rust/hello-sqlite/: Cargo.toml
chapter-03/rust/hello-sqlite/src/: main.rs
chapter-03/rust/http-bench/: .rustfmt.toml  Cargo.toml  latency_samples.txt
chapter-03/rust/http-bench/src/: main.rs
chapter-04/rust/replicated-sqlite/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
chapter-04/rust/replicated-sqlite/src/: main.rs
chapter-04/rust/replication-kv/: Cargo.toml
chapter-04/rust/replication-kv/src/: lib.rs  protocol.rs  store.rs  topology.rs
chapter-04/rust/workers-libsql/: Cargo.toml  README.md  wrangler.toml
chapter-04/rust/workers-libsql/src/: lib.rs
chapter-05/rust/hello-sqlite/: Cargo.toml
chapter-05/rust/hello-sqlite/src/: main.rs
chapter-05/rust/http-bench/: Cargo.toml
chapter-05/rust/http-bench/src/: main.rs
chapter-06/rust/hello-postgresql-cached/: Cargo.toml
chapter-06/rust/hello-postgresql-cached/src/: main.rs
chapter-07/rust/fibonacci/: Cargo.toml
chapter-07/rust/fibonacci/benches/: benchmark_pprof.rs  benchmark_simple.rs
chapter-07/rust/fibonacci/src/: lib.rs
chapter-08/rust/locking-bench/: Cargo.toml
chapter-08/rust/locking-bench/benches/: benchmark.rs
chapter-08/rust/locking-bench/src/: main.rs
chapter-08/rust/spsc-queue/: Cargo.toml
chapter-08/rust/spsc-queue/benches/: benchmark.rs
chapter-08/rust/spsc-queue/src/: lib.rs  (+2 more)
chapter-09/rust/sequential-vs-concurrent/: Cargo.toml
chapter-09/rust/sequential-vs-concurrent/benches/: benchmark.rs
