[package]
name = "latency-book-example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
anyhow = "1.0.69"
mobc = "0.8.1"
mobc-postgres = "0.8.0"
openssl = "0.10.45"
postgres-openssl = "0.5.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.7"
